Fix z-index of header

--- a/_sass/israelss/_header.scss
+++ b/_sass/israelss/_header.scss
@@ -6,6 +6,7 @@
   max-width: var(--content-width);
   width: 100%;
   margin: 0 auto;
+  z-index: 1000;
   & .wrapper {
     display: flex;
     flex-wrap: wrap;
